<resources>
    <string name="app_name">寝室维修站</string>
    <string name="centerManage">联社管理</string>
    <string name="addRecord">申请维修</string>
    <string name="searchRecord">查询维修记录</string>
    <string name="searchInstallRecord">待修理记录</string>
    <string name="searchResult">维修记录</string>
    <string name="searchInstallResult">安装记录</string>
    <string name="hint_site_name">请输入网点全称</string>
    <string name="managePeople">人员管理</string>
    <string name="repairPro">维修安装项目</string>
    <string name="siteManage">网点管理</string>
    <string name="manageInstall">安装记录</string>
    <string name="manageFitting">维修项目</string>
    <string name="addInstallRecord">安装记录</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_null_email">账号不能为空</string>
    <string name="error_null_password">密码不能为空</string>
    <string name="error_invalid_email">请检查账号</string>
    <string name="error_invalid_password">请检查密码</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">请输入账号</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_text">欢迎登陆寝室维修站</string>
</resources>
