<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pageBackground"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="寝室维修站"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <android.support.v7.widget.CardView
            android:id="@+id/cv_search_record"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_search"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/ic_search" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_search"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/searchRecord"
                    android:textColor="@color/black" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_search_install"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_search_install"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/ic_search" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_search_install"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/searchInstallRecord"
                    android:textColor="@color/black" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_add_record"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp">

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_record"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/ic_record" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_record"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/addRecord"
                    android:textColor="@color/black" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_manage_fitting"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_manage_fitting"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/ic_fitting" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_manage_fitting"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/manageFitting"
                    android:textColor="@color/black" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_manage_people"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_manage_people"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/ic_person" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_manage_people"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/managePeople"
                    android:textColor="@color/black" />

            </RelativeLayout>



        </android.support.v7.widget.CardView>

    </LinearLayout>

    <TextView
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:text="如在使用过程中遇到问题，\n 请联系邮箱：hit-dormitory@163.com"
        android:layout_height="wrap_content" />

        <!--<android.support.v7.widget.CardView-->
            <!--android:id="@+id/cv_manage_center"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="120dp"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:layout_marginEnd="10dp"-->
            <!--android:layout_marginRight="10dp"-->
            <!--android:layout_weight="1"-->
            <!--app:cardBackgroundColor="@color/white"-->
            <!--app:cardCornerRadius="10dp"-->
            <!--app:cardElevation="3dp">-->

            <!--<RelativeLayout-->

                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent">-->

                <!--<ImageView-->
                    <!--android:id="@+id/iv_manage_center"-->
                    <!--android:layout_width="50dp"-->
                    <!--android:layout_height="50dp"-->
                    <!--android:layout_centerHorizontal="true"-->
                    <!--android:layout_marginTop="25dp"-->
                    <!--android:src="@drawable/ic_center" />-->

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_below="@+id/iv_manage_center"-->
                    <!--android:layout_centerInParent="true"-->
                    <!--android:layout_marginTop="5dp"-->
                    <!--android:text="@string/centerManage"-->
                    <!--android:textColor="@color/black" />-->

            <!--</RelativeLayout>-->


        <!--</android.support.v7.widget.CardView>-->

        <!--<android.support.v7.widget.CardView-->
            <!--android:id="@+id/cv_site_manage"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="120dp"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:layout_marginEnd="10dp"-->
            <!--android:layout_marginRight="10dp"-->
            <!--android:layout_weight="1"-->
            <!--app:cardBackgroundColor="@color/white"-->
            <!--app:cardCornerRadius="10dp"-->
            <!--app:cardElevation="3dp">-->

            <!--<RelativeLayout-->

                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent">-->

                <!--<ImageView-->
                    <!--android:id="@+id/iv_manage_site"-->
                    <!--android:layout_width="50dp"-->
                    <!--android:layout_height="50dp"-->
                    <!--android:layout_centerHorizontal="true"-->
                    <!--android:layout_marginTop="25dp"-->
                    <!--android:src="@drawable/ic_site_manage" />-->

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_below="@+id/iv_manage_site"-->
                    <!--android:layout_centerInParent="true"-->
                    <!--android:layout_marginTop="5dp"-->
                    <!--android:text="@string/siteManage"-->
                    <!--android:textColor="@color/black" />-->

            <!--</RelativeLayout>-->

        <!--</android.support.v7.widget.CardView>-->

</LinearLayout>